# velox-server

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/server/src/: main.py
apps/server/src/api/: events.py
apps/server/src/core/: action_lifecycle.py  action_lifecycle_manager.py  action_lifecycle_repository.py  action_queue.py  actions.py  approvals.py  config.py  container.py  log.py  permission.py  planner.py
apps/server/src/core/events/: context.py  (+12 more)
apps/server/src/integrations/: calendar.py  calendar_ingress.py  gmail.py  google_provider.py
apps/server/src/workers/: executor.py  runtime.py
docs/engineering/: CODEX_CONTEXT.md  SPRINT_1_CLOSURE_AUDIT.md
docs/engineering/adr/: ADR-0001-gmail-real-adapter-oauth-boundary.md
infrastructure/docker/: server.Dockerfile
tests/: test_action_lifecycle.py  test_action_lifecycle_manager.py  test_action_lifecycle_repository.py  test_action_model.py  test_action_queue.py  test_api_hardening.py  test_approval_gate.py  test_calendar_ingress.py  test_calendar_integration.py  test_config_and_logging.py  test_event_classifier.py  test_event_context.py  test_event_inbox.py  test_event_lifecycle.py  test_event_lifecycle_manager.py  test_event_normalizer.py  test_event_pipeline.py  test_event_store.py  test_event_workflow.py  test_events_api.py  test_permission_decision.py  test_permission_engine.py  test_planner_contract.py  test_post_remediation_review.py  test_retry_semantics.py  test_service_container.py  test_universal_event.py  test_worker_executor.py  test_worker_runtime.py
